--- a/DadosGerais.html
+++ b/DadosGerais.html
@@ -45,37 +45,84 @@
     <!-- fim do card -->
 
     <!--Inicio do Card danger com um form -->
-
-    <div class="card border-danger mb-3" style="max-width: 55%; float: left;">
-        <div style="background-color:	#B22222" class="card-header border-danger text-white">Dados Gerais</div>
-        <div class="card-body">
-            <form>
-                <div class="form-group row">
-                    <label for="inputNome" class="col-sm-2 col-form-label">Nome:</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="inputNome"><br>
+    <div class="card-group">
+        <div class="card mb-3">
+            <div class="card-header bg-danger text-light">Dados Gerais</div>
+            <div class="card-body text-dark">
+                <form>
+                    <div class="form-group row">
+                        <label for="staticEmail" class="col-sm-3 col-form-label">Nome:</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control">
+                        </div>
                     </div>
-                    <label for="inputNasc" class="col-sm-2 col-form-label">Dt Nasc:</label>
-                    <div class="col-sm-10">
-                        <input type="date" class="form-control" id="inputNasc"><br>
+                    <div class="form-group row">
+                        <label for="inputPassword" class="col-sm-3 col-form-label">Dt. Nasc.:</label>
+                        <div class="col-sm-9">
+                            <input type="date" class="form-control">
+                        </div>
                     </div>
-                    <label for="inputMatricula" class="col-sm-2 col-form-label">Matricula:</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="inputMatricula"><br>
+                    <div class="form-group row">
+                        <label for="inputPassword" class="col-sm-3 col-form-label">Matrícula:</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control">
+                        </div>
                     </div>
-                    <label for="inputTurma" class="col-sm-2 col-form-label">Turma:</label>
-                    <div class="col-sm-10">
-                        <select type="text" class="form-control" id="inputTurma"><br>
-                            <option>ADS 1° Semestre</option>
-                            <option>ADS 2° Semestre</option>
-                            <option>ADS 3° Semestre</option>
+                    <div class="form-group row">
+                        <label for="inputPassword" class="col-sm-3 col-form-label">Turma:</label>
+                        <div class="col-sm-9">
+                            <select class="form-control">
+                                <option value="">ADS - 1°semestre</option>
+                                <option value="">ADS - 2°semestre</option>
+                                <option value="">ADS - 3°semestre</option>
+                                <option value="">ADS - 4°semestre</option>
+                                <option value="">ADS - 5°semestre</option>
+                            </select>
+                        </div>
                     </div>
-                </div>
-            </form>
+                </form>
+            </div>
+        </div> &nbsp;
+        <div class="card mb-3">
+            <div class="card-header bg-danger text-light">Contatos</div>
+            <div class="card-body text-dark">
+                <form>
+                    <div class="form-group row">
+                        <label for="staticEmail" class="col-sm-3 col-form-label">Email:</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="inputPassword" class="col-sm-3 col-form-label">Celular:</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="inputPassword" class="col-sm-3 col-form-label">CEP:</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="inputPassword" class="col-sm-3 col-form-label">Endereço:</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control">
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
     <!-- fim do Card e fim do form -->
-    <!-- Inicio do Card com form left -->
+    <div class="text-center">
+        <button type="button" class="btn btn-success">Salvar</button>
+        <button type="button" class="btn btn-danger">Voltar</button>
+    </div>
+</div>
+</body>
+
 </div>
 
 </body>
